<resources>
    <string name="app_name">MoneyLogger</string>
    <string name="app_version">1.0</string>
    <string name="app_author">wangtotang</string>
    <string name="app_author_qq">252554922</string>
    <string name="version">版本</string>
    <string name="author">制作人</string>
    <string name="qq">QQ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="set_activity_type">活动类别</string>
    <string name="set_activity_amount">金额</string>
    <string name="set_activity_description">描述</string>
    <string name="set_activity_time">时间</string>
    <string name="select_activity_type">选择类别</string>
    <string name="input_activity_amount_hint">请输入金额</string>
    <string name="input_activity_description_hint">请输入描述</string>
    <string name="tip_select_activity_type">请选择类别!</string>
    <string name="tip_input_activity_amount">请输入金额!</string>
    <string name="set_budget_type">预测</string>
    <string name="calculate_by_type">根据类别</string>
    <string name="set_pie_indicator_time"> 月 &#160; 日 &#160; 年 </string>
    <string name="set_trend_indicator_time"> &#160;周 &#160;&#160; 期&#160; </string>
    <string name="set_report_type">类别</string>
    <string name="set_report_start_time">开始时间</string>
    <string name="set_report_end_time">结束时间</string>
    <string name="set_budget_tip_flag">月初提醒</string>

</resources>
