<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base_color_background">

    <include
        layout="@layout/include_common_action_bar"/>

    <RelativeLayout
        style="@style/Item">

        <TextView
            style="@style/TextView.SubTitle"
            android:layout_centerVertical="true"
            android:text="@string/version" />

        <TextView
            style="@style/TextView.RightTitle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/app_version" />

    </RelativeLayout>

    <View style="@style/Line"/>

    <RelativeLayout
        style="@style/Item">

        <TextView
            style="@style/TextView.SubTitle"
            android:layout_centerVertical="true"
            android:text="@string/author" />

        <TextView
            style="@style/TextView.RightTitle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/app_author" />

    </RelativeLayout>

    <View style="@style/Line"/>

    <RelativeLayout
        style="@style/Item">

        <TextView
            style="@style/TextView.SubTitle"
            android:layout_centerVertical="true"
            android:text="@string/qq" />

        <TextView
            style="@style/TextView.RightTitle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/app_author_qq" />

    </RelativeLayout>

    <View style="@style/Line"/>

</LinearLayout>
